# robt403

./: README.md
LAB1/: README.md
LAB1/murat/: CMakeLists.txt
LAB1/murat/src/: pubnode.cpp
LAB1/turtlebot_controller/: CMakeLists.txt  package.xml
LAB1/turtlebot_controller/src/: exercise5.cpp
LAB2/: README.md
LAB2/lab2_task1/: package.xml
LAB2/lab2_task1/scripts/: sine_wave_pub.py  snake.py
robt403/: README.md
robt403/LAB1/: README.md
robt403/LAB1/murat/src/: subnode.cpp
robt403/LAB1/my_package/: CMakeLists.txt  package.xml
robt403/LAB1/turtlebot_controller/src/: subscriber.cpp
robt403/LAB2/: README.md
robt403/LAB2/lab2_task1/scripts/: sine_wave_pub_melodic.py  snake_melodic.py  square_wave_pub.py  square_wave_pub_melodic.py
robt403/LAB2/lab2_task1/src/: joint_controller.py
robt403/lab3/: package.xml
robt403/lab3/scripts/: real_robot.py  task1.py  task2.py  task3.py  task4.py  task5.py
robt403/lab4/: readme.md
robt403/lab4/lab4/: CMakeLists.txt  package.xml
robt403/lab4/lab4/src/: task2.cpp  task3.cpp
robt403/lab4/moveit_dimash/: CMakeLists.txt  package.xml
robt403/lab4/moveit_dimash/config/: fake_controllers.yaml  hand_tutorial.srdf  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
robt403/lab4/moveit_dimash/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  hand_tutorial_moveit_controller_manager.launch.xml  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
