<?xml version="1.0"?>
<package format="2">
  <name>lab4</name>
  <version>0.0.0</version>
  <description>The lab4 package</description>

  <maintainer email="dima@todo.todo">dima</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>tf2_ros</build_depend>  <!-- Added dependency -->
  <build_depend>std_msgs</build_depend>  <!-- Added dependency -->

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>moveit_core</build_export_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>  <!-- Added dependency -->
  <build_export_depend>std_msgs</build_export_depend>  <!-- Added dependency -->

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>tf2_ros</exec_depend>  <!-- Added dependency -->
  <exec_depend>std_msgs</exec_depend>  <!-- Added dependency -->

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>

